# astrafw

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  err_check.h  hardware.h  idf_component.yml  main.c
main/display_driver/: display_driver.c  display_driver.h
main/font_render/: font_arial_128.c  font_arial_128.h  font_arial_16.c  font_arial_16.h  font_arial_192.c  font_arial_192.h  font_arial_20.c  font_arial_20.h  font_arial_48.c  font_arial_48.h  font_render.c  font_render.h
main/i2c_driver/: i2c_driver.c  i2c_driver.h
main/i2s_driver/: i2s_driver.c  i2s_driver.h
main/nvs_driver/: nvs_driver.c  nvs_driver.h
main/power_driver/: power_driver.c  power_driver.h
main/rtc_driver/: rtc_driver.c  rtc_driver.h
main/spiffs_driver/: spiffs_driver.c  spiffs_driver.h
tools/: gen_font.py
